# orb_slam3_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/stereo/: localization.yaml  mapping.yaml
include/orb_slam3_ros/: boost_serialization.h  mono.h  mono_inertial.h  node.h  stereo.h  stereo_inertial.h
launch/: stereo.launch
orb_slam3_core/include/: Atlas.h  Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  GeometricTools.h  ImuTypes.h  KeyFrame.h  LoopClosing.h  MLPnPsolver.h  Map.h  MapPoint.h  ORBVocabulary.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  SerializationUtils.h  Settings.h  System.h  Tracking.h
orb_slam3_core/include/CameraModels/: KannalaBrandt8.h
orb_slam3_core/src/: Atlas.cc  Config.cc  Frame.cc  G2oTypes.cc  GeometricTools.cc  ImuTypes.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  Map.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc
src/: mono.cpp  mono_inertial.cpp  node.cpp  stereo.cpp  stereo_inertial.cpp
srv/: RescaleMap.srv  SetLocalizationMode.srv  SetMopp.srv
